# vlogkit

./: .gitignore  CLAUDE.md  pyproject.toml
desktop/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
desktop/electron/: electron.vite.config.ts  package.json  tsconfig.json
desktop/scripts/: gen-api-types.sh
desktop/web/: package.json
docs/superpowers/plans/: 2026-04-17-plan-1-backend-foundation.md  2026-04-17-plan-1-review.md  2026-04-17-plan-2-electron-shell.md  2026-04-17-plan-2-review.md  2026-04-17-plan-3-clips-analyze.md  2026-04-17-plan-3-review.md  2026-04-17-plan-4-review.md  2026-04-17-plan-4-storyboard-editor.md  2026-04-17-plan-5-review.md  2026-04-17-plan-5-semantic-search.md  2026-04-17-plan-6-export-packaging.md  2026-04-17-plan-6-review.md  2026-05-13-plan-1-wire-vision-into-analyze.md  2026-05-13-plan-2-vlogkit-score.md  2026-05-13-plan-3-multiagent-storyboard.md  2026-05-13-plan-desktop-ui-scores-and-agent-progress.md
docs/superpowers/specs/: 2026-04-17-desktop-app-design.md  2026-05-13-desktop-ui-scores-and-agent-progress-design.md  2026-05-13-murch-scoring-multi-agent-storyboard-design.md
src/vlogkit/: __init__.py  cli.py  config.py  ffmpeg_util.py  models.py  presets.py  project.py  server.py  templates.py
src/vlogkit/analyze/: audio.py  metadata.py  motion.py  pipeline.py  scenes.py  transcribe.py  vision.py
src/vlogkit/captions/: __init__.py  cues.py  formats.py  pipeline.py  render.py
src/vlogkit/edit/: __init__.py  broll.py  detect.py  intervals.py  tighten.py
src/vlogkit/export/: formats.py  timeline.py
src/vlogkit/interactive/: markdown.py
src/vlogkit/llm/: base.py  claude.py  openai_backend.py
tests/: test_broll.py  test_caption_animation.py  test_caption_cli.py  test_caption_cues.py  test_caption_formats.py  test_caption_models.py  test_caption_pipeline.py  test_caption_render.py  test_chapters.py  test_edit_detect.py  test_edit_intervals.py  test_edit_tighten.py  test_ffmpeg_util.py  test_highlight.py  test_markdown.py  test_models.py  test_pipeline.py  test_presets.py  test_render_cli.py  test_render_overlays.py  test_render_resolution.py  test_score.py  test_search.py  test_shorts.py  test_storyboard_agents.py  test_storyboard_builder.py  test_strategies.py  test_thumbnail.py  test_tighten_cli.py  test_tighten_models.py
tests/server/: conftest.py  test_analyze.py  test_auth.py  test_captions.py  test_clip_index.py  test_clips.py  test_clips_route_analysis_shape.py  test_deps.py  test_entrypoint.py  test_event_models.py  test_export.py  test_health.py  test_media.py  test_media_query_auth.py  test_openapi_snapshot.py  test_projects.py  test_registry.py  test_render.py  test_score_job.py  test_score_route.py  test_search.py  test_storyboard.py  test_tighten.py  test_uploads.py  test_ws.py
(+91 files in other folders)
