[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlogkit"
version = "0.1.0"
description = "AI-powered vlog assembly tool — analyze clips, storyboard with LLM, export to NLE"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Bryan" }]

dependencies = [
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "faster-whisper>=1.0",
    "stable-ts>=2.0",
    "scenedetect[opencv]>=0.6",
    "opentimelineio>=0.17",
    "anthropic>=0.40",
    "ffmpeg-python>=0.2",
    "rich>=13.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
    "qrcode>=7.0",
]

[project.optional-dependencies]
search = [
    "sentrysearch @ git+https://github.com/ssrajadh/sentrysearch.git",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "httpx>=0.27",
]

[project.scripts]
vlogkit = "vlogkit.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vlogkit"]
